# librsync-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  rustfmt.toml
.github/: dependabot.yml
librsync-sys/: Cargo.toml  README.md  build.rs  lib.rs
librsync-sys/config/: config.h
librsync-sys/config/i686-unknown-linux-gnu/: config.h
librsync-sys/config/x86_64-pc-windows-msvc/: config.h  librsync-config.h
librsync-sys/config/x86_64-unknown-linux-gnu/: config.h
librsync-sys/prototab/: prototab.c  prototab.h
src/: job.rs  lib.rs  logfwd.rs  macros.rs  unstrait.rs  whole.rs
