[package]
name = "librsync"
version = "0.0.1"
authors = ["Michele Bertasi <@brt_device>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["librsync", "rsync", "backup"]
repository = "https://github.com/mbrt/librsync-rs"
homepage = "https://github.com/mbrt/librsync-rs"
description = """
Bindings to librsync for calculating and applying network
deltas exposed as Reader/Writer streams.
"""
