[package]
name = "librsync-sys"
version = "0.1.2"
authors = ["Michele Bertasi <@brt_device>"]
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/mbrt/librsync-rs"
homepage = "https://github.com/mbrt/librsync-rs"
description = """
Bindings to librsync for calculating and applying network
deltas exposed as Reader/Writer streams.
"""

[lib]
name = "librsync_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
